--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Roboto', monospace;
   min-height: 40px;
 
-  background: linear-gradient(#00000080, #00000080 100%), url("/calculadora-de-nota-media/imagens/background-school.jpg");
+  background: linear-gradient(#00000080, #00000080 100%), url("/imagens/background-school.jpg");
   background-size: cover;
   text-align: center;
   background-color: #F0F8FF;
@@ -29,7 +29,7 @@ button {
 label {
   color: #E0FFFF;
   font-weight: bold;
-  text-size: 10px;
+  font-size: 10px;
   text-shadow: 0 0 5px #111111;
 }
 
